--- a/Webbisivu/style.css
+++ b/Webbisivu/style.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: 'Poppins', sans-serif;
-    background-image: url('Wave.svg');
+    background-image: url('Webbisivu/Wave.svg');
     background-size: 100% 100%;
     background-position: top center;
     background-attachment: fixed;
@@ -74,6 +74,7 @@ main {
 .hero h1 {
     font-size: 3em;
     font-family: "Franklin Gothic Book";
+    letter-spacing: 0.8px;
     width: 300px;
     color: #ffffff;
     background-color: rgba(0, 0, 0, 0.2);
@@ -81,8 +82,6 @@ main {
     padding: 10px 20px;
     border-radius: 5px;
     margin: 0 auto;
-
-
 }
 
 .home-image {
